--- a/_includes/tag.html
+++ b/_includes/tag.html
@@ -1,4 +1,5 @@
 <div id="posts" class="posts-collapse" hidden>
+<div id="posts" class="posts-collapse" hidden>
   <div class="collection-title">
     <{% if site.seo %}h2{% else %}h1{% endif %}>
     {{ page.tag }}
