--- a/_includes/_macro/post.html
+++ b/_includes/_macro/post.html
@@ -117,7 +117,13 @@
           {% if post.author %}
             <span class="post-author" >
               <span class="post-meta-divider">|</span>
-              <i class="fa fa-user"></i>{{ post.author }}
+              <span class="post-meta-item-icon">
+                <i class="fa fa-user"></i>
+              </span>
+              {% if site.post_meta.item_text %}
+                <span class="post-meta-item-text">{{ __.post.copyright.author }}</span>
+              {% endif %}
+              {{ post.author }}
             </span>
           {% endif %}
 
