--- a/_includes/_macro/post.html
+++ b/_includes/_macro/post.html
@@ -128,7 +128,7 @@
           {% endif %}
 
           {% if post.comments %}
-            {% elsif site.LiveRe_control %}
+            {% if site.LiveRe_control %}
               <span class="post-comments-count">
                 <span class="post-meta-divider">|</span>
                 <span class="post-meta-item-icon">
