--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,8 @@
 ---
 layout: layout
+comments: true
 ---
 
 {% assign __ = site.data.languages[site.language] %}
 {% include post.html %}
+{% include comments.html %}
