--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,4 +5,6 @@ comments: true
 
 {% assign __ = site.data.languages[site.language] %}
 {% include post.html %}
+
+<h2 id="comments">Comments</h2>
 {% include comments.html %}
