--- a/_includes/_macro/post.html
+++ b/_includes/_macro/post.html
@@ -1,5 +1,9 @@
-{% comment %} post(post, is_index, post_extra_class) {% endcomment %}
+---
+comments: true
+---
 
+{% comment %} post(post, is_index, post_extra_class) {% endcomment %}
+{% include comments.html %}
   {% if 'quote, picture' contains post.type %}
     {% assign headlessPost = true %}
   {% endif %}
