--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,3 +7,6 @@ layout: layout
 
 <h2 id="comments">Comments</h2>
 {% include comments.html %}
+
+<h2 id="leancloud-analytics">leancloud-analytics</h2>
+{% include leancloud-analytics.html %}
