--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,10 +8,5 @@ layout: layout
 <h2 id="comments">Comments</h2>
 {% include comments.html %}
 
-{% if site.leancloud_visitors.enable %}
-   <span id="{{ page.url }}" class="leancloud_visitors" data-flag-title="{{ page.title }}">
-    <span class="post-meta-divider">|</span>
-    <span class="post-meta-item-text"> Hits:  </span>
-    <span class="leancloud-visitors-count"></span>
-   </span>
-{% endif %}
+<h2 id="leancloud-analytics">leancloud-analytics</h2>
+{% include leancloud-analytics.html %}
