--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -4,3 +4,6 @@ layout: layout
 
 {% assign __ = site.data.languages[site.language] %}
 {% include index.html %}
+
+<h2 id="leancloud-analytics">leancloud-analytics</h2>
+{% include leancloud-analytics.html %}
