--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,4 +9,4 @@ layout: layout
 {% include comments.html %}
 
 <h2 id="leancloud-analytics">leancloud-analytics</h2>
-{% include leancloud-analytics.html %}
+{% include _third-party/analytics/lean-analytics.html %}
