--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,5 +8,5 @@ layout: layout
 <h2 id="comments">Comments</h2>
 {% include comments.html %}
 
-<h2 id="leancloud-analytics">leancloud-analytics</h2>
+<h2 id="lean-analytics">lean-analytics</h2>
 {% include _third-party/analytics/lean-analytics.html %}
