--- a/_includes/_third-party/comments/livere.html
+++ b/_includes/_third-party/comments/livere.html
@@ -1,18 +1,26 @@
 {% unless site.duoshuo and site.duoshuo.shortname %}
   {% unless site.hypercomments_id or site.gentie_productKey or site.duoshuo_shortname or site.disqus.enable and site.disqus.shortname %}
 
-    {% if page.comments and site.livere_uid %}
-      <script type="text/javascript">
-        (function(d, s) {
-          var j, e = d.getElementsByTagName(s)[0];
-          if (typeof LivereTower === 'function') { return; }
-          j = d.createElement(s);
-          j.src = 'https://cdn-city.livere.com/js/embed.dist.js';
-          j.async = true;
-          e.parentNode.insertBefore(j, e);
-        })(document, 'script');
-      </script>
+    {% if site.LiveRe_control %}
+    <!-- 来必力City版安装代码 -->
+    <div id="lv-container" data-id="city" data-uid="MTAyMC8zNzg4Ni8xNDQxNg==">
+        <script type="text/javascript">
+       (function(d, s) {
+           var j, e = d.getElementsByTagName(s)[0];
+
+           if (typeof LivereTower === 'function') { return; }
+
+           j = d.createElement(s);
+           j.src = 'https://cdn-city.livere.com/js/embed.dist.js';
+           j.async = true;
+
+           e.parentNode.insertBefore(j, e);
+       })(document, 'script');
+        </script>
+    <noscript> 为正常使用来必力评论功能请激活JavaScript</noscript>
+    </div>
+    <!-- City版安装代码已完成 -->
     {% endif %}
 
-  {% endunless %}
-{% endunless %}
+      {% endunless %}
+    {% endunless %}
