--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,7 @@ layout: layout
 {% include post.html %}
 
 <h2 id="comments">Comments</h2>
-{% include comments.html %}
+{% include _third-party/comments/livere.html %}
 
 <h2 id="lean-analytics">lean-analytics</h2>
 {% include _third-party/analytics/lean-analytics.html %}
