--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,4 +6,4 @@ layout: layout
 {% include post.html %}
 
 <h2 id="comments">Comments</h2>
-{% include livere.html %}
+{% include _third-party/comments/livere.html %}
