--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: layout
 ---
 
 {% assign __ = site.data.languages[site.language] %}
-{% include post.html %}
+<!--{% include post.html %}-->
 
 <h2 id="comments">Comments</h2>
 {% include _third-party/comments/livere.html %}
