--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,5 +5,5 @@ layout: layout
 {% assign __ = site.data.languages[site.language] %}
 {% include post.html %}
 
-<h2 id="comments">Comments</h2>
+<!--<h2 id="comments">Comments</h2>-->
 {% include comments.html %}
