--- a/_includes/_third-party/analytics/index.html
+++ b/_includes/_third-party/analytics/index.html
@@ -6,3 +6,4 @@
 {% include _third-party/analytics/tencent-mta.html %}
 {% include _third-party/analytics/cnzz-analytics.html %}
 {% include _third-party/analytics/application-insights.html %}
+{% include _third-party/analytics/lean-analytics.html %}
