--- a/_includes/_layout.html
+++ b/_includes/_layout.html
@@ -74,7 +74,7 @@
 
   {% include _scripts/boostrap.html %}
 
-  {% include _third-party/comments/index.html %}
+  <!--{% include _third-party/comments/index.html %}-->
   {% include _third-party/search/index.html %}
   {% include _third-party/analytics/lean-analytics.html %}
   {% include _third-party/seo/baidu-push.html %}
