--- a/_includes/_third-party/comments/index.html
+++ b/_includes/_third-party/comments/index.html
@@ -4,5 +4,5 @@
 {% include _third-party/comments/gentie.html %}
 {% include _third-party/comments/gitalk.html %}
 {% include _third-party/comments/youyan.html %}
-<!--{% include _third-party/comments/livere.html %}-->
+{% include _third-party/comments/livere.html %}
 {% include _third-party/comments/changyan.html %}
