--- a/_includes/_macro/post.html
+++ b/_includes/_macro/post.html
@@ -127,18 +127,18 @@
           {% endif %}
 
           {% if post.comments %}
-            {% if site.LiveRe_control %}
-              <span class="post-comments-count">
-                <span class="post-meta-divider">|</span>
-                <span class="post-meta-item-icon">
-                  <i class="fa fa-comment-o"></i>
-                </span>
-                <a href="{{ post.url | relative_url }}#comments" itemprop="discussionUrl">
-                  <span class="post-comments-count livere-comment-count"
-                        data-livere-identifier="{{ post.url }}" itemprop="commentCount"></span>
-                </a>
-              </span>
-            {% elsif site.disqus.enable and site.disqus.count %}
+            <!--{% if site.LiveRe_control %}-->
+              <!--<span class="post-comments-count">-->
+                <!--<span class="post-meta-divider">|</span>-->
+                <!--<span class="post-meta-item-icon">-->
+                  <!--<i class="fa fa-comment-o"></i>-->
+                <!--</span>-->
+                <!--<a href="{{ post.url | relative_url }}#comments" itemprop="discussionUrl">-->
+                  <!--<span class="post-comments-count livere-comment-count"-->
+                        <!--data-livere-identifier="{{ post.url }}" itemprop="commentCount"></span>-->
+                <!--</a>-->
+              <!--</span>-->
+            {% if site.disqus.enable and site.disqus.count %}
               <span class="post-comments-count">
                 <span class="post-meta-divider">|</span>
                 <span class="post-meta-item-icon">
