--- a/_includes/_layout.html
+++ b/_includes/_layout.html
@@ -37,7 +37,7 @@
             {{ content }}
           </div>
           {% include _third-party/duoshuo-hot-articles.html %}
-          <!--{% include _partials/comments.html %}-->
+          {% include _partials/comments.html %}
         </div>
         {% if site.sidebar.display != 'remove' %}
           {{ sidebar }}
