--- a/_includes/_macro/post.html
+++ b/_includes/_macro/post.html
@@ -1,4 +1,5 @@
 {% comment %} post(post, is_index, post_extra_class) {% endcomment %}
+
   {% if 'quote, picture' contains post.type %}
     {% assign headlessPost = true %}
   {% endif %}
@@ -113,95 +114,91 @@
             </span>
           {% endif %}
 
-          {% if post.author %}
-            <span class="post-author" >
+          {% if post.comments %}
+            {% if site.duoshuo_shortname or site.duoshuo and site.duoshuo.shortname %}
+              <span class="post-comments-count">
+                <span class="post-meta-divider">|</span>
+                <span class="post-meta-item-icon">
+                  <i class="fa fa-comment-o"></i>
+                </span>
+                <a href="{{ post.url | relative_url }}#comments" itemprop="discussionUrl">
+                  <span class="post-comments-count ds-thread-count" data-thread-key="{{ post.url }}" itemprop="commentCount"></span>
+                </a>
+              </span>
+            {% elsif site.facebook_comments_plugin.enable %}
+              <span class="post-comments-count">
+                <span class="post-meta-divider">|</span>
+                <span class="post-meta-item-icon">
+                  <i class="fa fa-comment-o"></i>
+                </span>
+                <a href="{{ post.url | relative_url }}#comments" itemprop="discussionUrl">
+                  <span class="post-comments-count fb-comments-count" data-href="{{ post.url | absolute_url }}" itemprop="commentCount">0</span> comments
+                </a>
+              </span>
+            {% elsif site.disqus.enable and site.disqus.count %}
+              <span class="post-comments-count">
+                <span class="post-meta-divider">|</span>
+                <span class="post-meta-item-icon">
+                  <i class="fa fa-comment-o"></i>
+                </span>
+                <a href="{{ post.url | relative_url }}#comments" itemprop="discussionUrl">
+                  <span class="post-comments-count disqus-comment-count"
+                        data-disqus-identifier="{{ post.url }}" itemprop="commentCount"></span>
+                </a>
+              </span>
+            {% elsif site.hypercomments_id %}
+            <!--noindex-->
+              <span class="post-comments-count">
+                <span class="post-meta-divider">|</span>
+                <span class="post-meta-item-icon">
+                  <i class="fa fa-comment-o"></i>
+                </span>
+                <a href="{{ post.url | relative_url }}#comments" itemprop="discussionUrl">
+                  <span class="post-comments-count hc-comment-count" data-xid="{{ post.url }}" itemprop="commentsCount"></span>
+                </a>
+              </span>
+              <!--/noindex-->
+            {% elsif post.layout == 'post' and site.gentie_productKey %}
+              <span class="post-comments-count">
+                <span class="post-meta-divider">|</span>
+                <span class="post-meta-item-icon">
+                  <i class="fa fa-comment-o"></i>
+                </span>
+                <a class="cloud-tie-join-count" href="{{ post.url | relative_url }}#comments" itemprop="discussionUrl">
+                  <span class="post-comments-count join-count" itemprop="commentCount"></span>
+                </a>
+              </span>
+            {% elsif site.changyan.enable and site.changyan.appid and site.changyan.appkey %}
+              <span class="post-comments-count">
               <span class="post-meta-divider">|</span>
               <span class="post-meta-item-icon">
-                <i class="fa fa-user"></i>
+                <i class="fa fa-comment-o"></i>
               </span>
-              {% if site.post_meta.item_text %}
-                <span class="post-meta-item-text">{{ __.post.copyright.author }}</span>
+              {% if post.layout == 'post' %}
+                <a href="{{ post.url | relative_url }}#SOHUCS" itemprop="discussionUrl">
+                  <span id="changyan_count_unit" class="post-comments-count hc-comment-count" data-xid="{{ post.url }}" itemprop="commentsCount"></span>
+                </a>
+              {% else %}
+                <a href="{{ post.url | relative_url }}#SOHUCS" itemprop="discussionUrl">
+                  <span id="url::{{ post.url | absolute_url }}" class="cy_cmt_count" data-xid="{{ post.url }}" itemprop="commentsCount" ></span>
+                </a>
               {% endif %}
-              {{ post.author }}
-            </span>
+            {% endif %}
           {% endif %}
 
-          <!--{% if post.comments %}-->
-            <!--{% if site.LiveRe_control %}-->
-              <!--<span class="post-comments-count">-->
-                <!--<span class="post-meta-divider">|</span>-->
-                <!--<span class="post-meta-item-icon">-->
-                  <!--<i class="fa fa-comment-o"></i>-->
-                <!--</span>-->
-                <!--<a href="{{ post.url | relative_url }}#comments" itemprop="discussionUrl">-->
-                  <!--<span class="post-comments-count livere-comment-count"-->
-                        <!--data-livere-identifier="{{ post.url }}" itemprop="commentCount"></span>-->
-                <!--</a>-->
-              <!--</span>-->
-            <!--{% elsif site.disqus.enable and site.disqus.count %}-->
-              <!--<span class="post-comments-count">-->
-                <!--<span class="post-meta-divider">|</span>-->
-                <!--<span class="post-meta-item-icon">-->
-                  <!--<i class="fa fa-comment-o"></i>-->
-                <!--</span>-->
-                <!--<a href="{{ post.url | relative_url }}#comments" itemprop="discussionUrl">-->
-                  <!--<span class="post-comments-count disqus-comment-count"-->
-                        <!--data-disqus-identifier="{{ post.url }}" itemprop="commentCount"></span>-->
-                <!--</a>-->
-              <!--</span>-->
-            <!--{% elsif site.hypercomments_id %}-->
-            <!--&lt;!&ndash;noindex&ndash;&gt;-->
-              <!--<span class="post-comments-count">-->
-                <!--<span class="post-meta-divider">|</span>-->
-                <!--<span class="post-meta-item-icon">-->
-                  <!--<i class="fa fa-comment-o"></i>-->
-                <!--</span>-->
-                <!--<a href="{{ post.url | relative_url }}#comments" itemprop="discussionUrl">-->
-                  <!--<span class="post-comments-count hc-comment-count" data-xid="{{ post.url }}" itemprop="commentsCount"></span>-->
-                <!--</a>-->
-              <!--</span>-->
-              <!--&lt;!&ndash;/noindex&ndash;&gt;-->
-            <!--{% elsif post.layout == 'post' and site.gentie_productKey %}-->
-              <!--<span class="post-comments-count">-->
-                <!--<span class="post-meta-divider">|</span>-->
-                <!--<span class="post-meta-item-icon">-->
-                  <!--<i class="fa fa-comment-o"></i>-->
-                <!--</span>-->
-                <!--<a class="cloud-tie-join-count" href="{{ post.url | relative_url }}#comments" itemprop="discussionUrl">-->
-                  <!--<span class="post-comments-count join-count" itemprop="commentCount"></span>-->
-                <!--</a>-->
-              <!--</span>-->
-            <!--{% elsif site.changyan.enable and site.changyan.appid and site.changyan.appkey %}-->
-              <!--<span class="post-comments-count">-->
-              <!--<span class="post-meta-divider">|</span>-->
-              <!--<span class="post-meta-item-icon">-->
-                <!--<i class="fa fa-comment-o"></i>-->
-              <!--</span>-->
-              <!--{% if post.layout == 'post' %}-->
-                <!--<a href="{{ post.url | relative_url }}#SOHUCS" itemprop="discussionUrl">-->
-                  <!--<span id="changyan_count_unit" class="post-comments-count hc-comment-count" data-xid="{{ post.url }}" itemprop="commentsCount"></span>-->
-                <!--</a>-->
-              <!--{% else %}-->
-                <!--<a href="{{ post.url | relative_url }}#SOHUCS" itemprop="discussionUrl">-->
-                  <!--<span id="url::{{ post.url | absolute_url }}" class="cy_cmt_count" data-xid="{{ post.url }}" itemprop="commentsCount" ></span>-->
-                <!--</a>-->
-              <!--{% endif %}-->
-            <!--{% endif %}-->
-          <!--{% endif %}-->
-
-          <!--{% comment %} LeanCould PageView {% endcomment %}-->
-          <!--{% if site.leancloud_visitors.enable %}-->
-             <!--<span id="{{ post.url | relative_url }}" class="leancloud_visitors" data-flag-title="{{ post.title }}">-->
-               <!--<span class="post-meta-divider">|</span>-->
-               <!--<span class="post-meta-item-icon">-->
-                 <!--<i class="fa fa-eye"></i>-->
-               <!--</span>-->
-               <!--{% if site.post_meta.item_text %}-->
-                 <!--<span class="post-meta-item-text">{{__.post.visitors}} </span>-->
-               <!--{% endif %}-->
-               <!--<span class="leancloud-visitors-count"></span>-->
-             <!--</span>-->
-          <!--{% endif %}-->
+          {% comment %} LeanCould PageView {% endcomment %}
+          {% if site.leancloud_visitors.enable %}
+             <span id="{{ post.url | relative_url }}" class="leancloud_visitors" data-flag-title="{{ post.title }}">
+               <span class="post-meta-divider">|</span>
+               <span class="post-meta-item-icon">
+                 <i class="fa fa-eye"></i>
+               </span>
+               {% if site.post_meta.item_text %}
+                 <span class="post-meta-item-text">{{__.post.visitors}} </span>
+               {% endif %}
+                 <span class="leancloud-visitors-count"></span>
+             </span>
+          {% endif %}
 
           {% if site.busuanzi_count.enable and site.busuanzi_count.page_pv and is_index == false or is_index == nil%}
             <span class="post-meta-divider">|</span>
@@ -211,6 +208,8 @@
           {% endif %}
 
           {% if site.post_wordcount.wordcount or site.post_wordcount.min2read %}
+            {% assign source = post.content %}
+            {% include _helper/wordcount.html %}
             <div class="post-wordcount">
               {% if site.post_wordcount.wordcount %}
                 {% unless site.post_wordcount.separated_meta %}
@@ -223,7 +222,7 @@
                   <span class="post-meta-item-text">{{ __.post.wordcount }}</span>
                 {% endif %}
                 <span title="{{ __.post.wordcount }}">
-                  {{ post.content | number_of_words }}
+                  {{ wordcount }}
                 </span>
               {% endif %}
 
@@ -239,7 +238,7 @@
                   <span class="post-meta-item-text">{{ __.post.min2read }}</span>
                 {% endif %}
                 <span title="{{ __.post.min2read }}">
-                  {{ post.content | number_of_words | divided_by: 200 }}
+                  {{ wordcount | divided_by: 200 }}
                 </span>
               {% endif %}
             </div>
