--- a/_includes/_third-party/analytics/lean-analytics.html
+++ b/_includes/_third-party/analytics/lean-analytics.html
@@ -1,6 +1,6 @@
 {% if site.leancloud_visitors.enable %}
 
-  {% comment %} custom analytics part create by binzhou {% endcomment %}
+  {% comment %} custom analytics part create by xiamo {% endcomment %}
   <script src="https://cdn1.lncld.net/static/js/av-core-mini-0.6.1.js"></script>
   <script>AV.initialize("{{site.leancloud_visitors.app_id}}", "{{site.leancloud_visitors.app_key}}");</script>
   <script>
@@ -81,7 +81,7 @@
             newcounter.save(null, {
               success: function(newcounter) {
                 var $element = $(document.getElementById(url));
-                $element.find('.leancloud-visitors-count').text(counter.get('time'));
+                $element.find('.leancloud-visitors-count').text(newcounter.get('time'));
               },
               error: function(newcounter, error) {
                 console.log('Failed to create');
