--- a/_includes/_third-party/comments/livere.html
+++ b/_includes/_third-party/comments/livere.html
@@ -18,3 +18,42 @@
 {% endunless %}
 
 
+<!--{% if site.LiveRe_control %}-->
+<!--&lt;!&ndash; 来必力City版安装代码 &ndash;&gt;-->
+<!--<div id="lv-container" data-id="city" data-uid="MTAyMC8zNzg4Ni8xNDQxNg==">-->
+    <!--<script type="text/javascript">-->
+   <!--(function(d, s) {-->
+       <!--var j, e = d.getElementsByTagName(s)[0];-->
+
+       <!--if (typeof LivereTower === 'function') { return; }-->
+
+       <!--j = d.createElement(s);-->
+       <!--j.src = 'https://cdn-city.livere.com/js/embed.dist.js';-->
+       <!--j.async = true;-->
+
+       <!--e.parentNode.insertBefore(j, e);-->
+   <!--})(document, 'script');-->
+    <!--</script>-->
+<!--<noscript> 为正常使用来必力评论功能请激活JavaScript</noscript>-->
+<!--</div>-->
+<!--&lt;!&ndash; City版安装代码已完成 &ndash;&gt;-->
+<!--{% endif %}-->
+
+<!--&lt;!&ndash; 来必力City版安装代码 &ndash;&gt;-->
+<!--<div id="lv-container" data-id="city" data-uid="MTAyMC8zOTM0MS8xNTg2OA==">-->
+	<!--<script type="text/javascript">-->
+   <!--(function(d, s) {-->
+       <!--var j, e = d.getElementsByTagName(s)[0];-->
+
+       <!--if (typeof LivereTower === 'function') { return; }-->
+
+       <!--j = d.createElement(s);-->
+       <!--j.src = 'https://cdn-city.livere.com/js/embed.dist.js';-->
+       <!--j.async = true;-->
+
+       <!--e.parentNode.insertBefore(j, e);-->
+   <!--})(document, 'script');-->
+	<!--</script>-->
+<!--<noscript> 为正常使用来必力评论功能请激活JavaScript</noscript>-->
+<!--</div>-->
+<!--&lt;!&ndash; City版安装代码已完成 &ndash;&gt;-->
