--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,3 +4,7 @@ layout: layout
 
 {% assign __ = site.data.languages[site.language] %}
 {% include post.html %}
+
+
+<h2 id="comments">Comments</h2>
+{% include livere.html %}
