--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -4,3 +4,8 @@ layout: layout
 
 {% assign __ = site.data.languages[site.language] %}
 {% include index.html %}
+
+
+
+<h2 id="comments">Comments</h2>
+{% include livere.html %}
